--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,35 +5,25 @@
 
 <div class="row">
 
-<div class="col-md-3"></div>
-<div class="col-md-6" *ngIf="!heroInEdit">
-  <ul class="hero">
-  <li *ngFor="let hero of heroes" class="row hero">
-    <div class="col-md-4 hero-potrait" > <img [src]="'./assets/PNG/' + hero.imagePath"/>  </div>
-  <div class="col-md-8 hero-label">
-    <label for="">Id:</label> <strong> {{hero.id}}</strong>  <br/>
-    <label for="">Name:</label> <strong> {{hero.name}}</strong>  <br/>
-    <label for="">Image:</label> <strong> {{hero.imagePath}}</strong> <br/>
-    <button (click)="editHero(hero)">Edit</button>
-     </div> 
-</li>
-   </ul>
-</div>
-
-<div class="col-md-6" *ngIf="heroInEdit">
-  <div class="row">
-    <div class="col-md-4"> <img [src]="'./assets/PNG/' + heroInEdit.imagePath"/></div>
-    <div class="col-md-8">
-              <label for="">Id:</label> <strong> {{heroInEdit.id}}</strong>  <br/>
-    <label for="">Name:</label> <input type="text" [(ngModel)]="heroInEdit.name"> <br/>
-    <label for="">Image:</label> <input type="text" [(ngModel)]="heroInEdit.imagePath"><br/>
-     <button (click)="heroInEdit = null;">Save</button>
+  <div class="col-md-3"></div>
+  <div class="col-md-6" *ngIf="!heroInEdit">
+      <ul class="hero">
+      <li *ngFor="let hero of heroes" class="row hero">
+          <bjk-hero  [hero]="hero"></bjk-hero>
+          <button (click)="editHero(hero)">Edit</button>
+    </li>
+      </ul>
   </div>
 
-</div>
-
-
-</div>
-<div class="col-md-3"></div>
+  <div class="col-md-6" *ngIf="heroInEdit">
+      <bjk-hero-edit  [hero]="heroInEdit"></bjk-hero-edit>
+      <button (click)="heroInEdit = null;">Save</button>
 
   </div>
+
+
+
+  <div class="col-md-3"></div>
+
+  </div>
+   
