--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,9 @@ div.hero-label {
     padding-bottom: auto;
 
 }
+
+div.editpanel {
+     border: 1px solid black;
+        border-radius: 6px;
+
+}
