--- a/src/app/heroes.component.html
+++ b/src/app/heroes.component.html
@@ -1,4 +1,25 @@
 
+
+<div class="row">
+
+  <div class="col-md-12">
+      <button (click)="saveHeroes()">Save</button>   <button (click)="loadHeroes()">Load</button>
+  </div>
+  </div>
+
+<div class="row" *ngIf="!heroInEdit">
+
+  <div class="col-md-6">
+    <pagination [boundaryLinks]="true" [totalItems]="totalItems" [(ngModel)]="currentPage" class="pagination-sm"
+                (pageChanged)="pageChanged($event)"
+                previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;"></pagination>
+  </div>
+  </div>
+
+
+
+
+
 <div class="row">
 
   <div class="col-md-3"></div>
@@ -12,8 +33,8 @@
   </div>
 
   <div class="col-md-6" *ngIf="heroInEdit">
-      <bjk-hero-edit  [hero]="heroInEdit"></bjk-hero-edit>
-      <button (click)="heroInEdit = null;">Save</button>
+      <bjk-hero-edit-template  [hero]="heroInEdit"></bjk-hero-edit-template>
+      <button (click)="saveHero(hero)">Save</button>
 
   </div>
 
