--- a/src/app/heroes.component.html
+++ b/src/app/heroes.component.html
@@ -43,4 +43,12 @@
   <div class="col-md-3"></div>
 
   </div>
-   
+   <div class="row" *ngIf="!heroInEdit">
+
+  <div class="col-md-6">
+    <pagination [boundaryLinks]="true" [totalItems]="totalItems" [(ngModel)]="currentPage" class="pagination-sm"
+                (pageChanged)="pageChanged($event)"
+                previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;"></pagination>
+  </div>
+  </div>
+
