--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,8 @@ div.hero-label {
 div.editpanel {
      border: 1px solid black;
         border-radius: 6px;
-
+        padding: 10px 10px 10px 10px;
+        margin: 10px 10px 10px 10px;
 }
 
 nav a.active {
