--- a/src/app/hero-edit-template.component/hero-edit-template.component.html
+++ b/src/app/hero-edit-template.component/hero-edit-template.component.html
@@ -1,4 +1,5 @@
  <div>
+ <h2>Template Form</h2>
   <form (ngSubmit)="updateHero()" #heroForm="ngForm" novalidate>
   <div class="row editpanel">
     <div class="col-md-4"> <img [src]="'./assets/PNG/' + hero.imagePath"/></div>
